--- a/templates/chat-room.html
+++ b/templates/chat-room.html
@@ -1,27 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/chat-room.css') }}" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"/>
   </head>
   <body>
     <div class="chat-room">
@@ -264,7 +252,6 @@
                     class="phone-icon"
                     loading="lazy"
                     alt=""
-                    
                     src="{{url_for('static', filename='image/phone.svg')}}"
                   />
 
@@ -337,7 +324,6 @@
                   class="mic-icon"
                   loading="lazy"
                   alt=""
-                  
                   src="{{url_for('static', filename='image/mic.svg')}}"
                 />
 
@@ -353,7 +339,6 @@
                   class="image-icon1"
                   loading="lazy"
                   alt=""
-                  
                   src="{{url_for('static', filename='image/image-1.svg')}}"
                 />
               </div>
