--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,27 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/profile.css') }}" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"/>
   </head>
   <body>
     <div class="profile">
@@ -37,7 +25,6 @@
               alt=""
               src="{{url_for('static', filename='image/pxl-20210309-203454756-1@2x.png')}}"
             />
-
             <div class="washi-tape-1-parent">
               <div class="washi-tape-1"></div>
               <div class="washi-tape-2"></div>
@@ -54,7 +41,6 @@
                 class="star-icon"
                 loading="lazy"
                 alt=""
-                
                 src="{{url_for('static', filename='image/star@2x.png')}}"
               />
 
@@ -68,7 +54,6 @@
                     <img
                       class="line-copy-5"
                       alt=""
-                      
                       src="{{url_for('static', filename='image/line-copy-5.svg')}}"
                     />
 
@@ -89,14 +74,12 @@
                     <img
                       class="line-copy-3"
                       alt=""
-                      
                       src="{{url_for('static', filename='image/line-copy-3.svg')}}"
                     />
 
                     <img
                       class="vector-icon3"
                       alt=""
-                      
                       src="{{url_for('static', filename='image/vector-1.svg')}}"
                     />
                   </div>
@@ -112,14 +95,12 @@
                     <img
                       class="line-copy-icon"
                       alt=""
-                      
                       src="{{url_for('static', filename='image/line-copy.svg')}}"
                     />
 
                     <img
                       class="vector-icon4"
                       alt=""
-                      
                       src="{{url_for('static', filename='image/vector-1.svg')}}"
                     />
                   </div>
@@ -131,21 +112,18 @@
                   class="heart-icon"
                   loading="lazy"
                   alt=""
-                  
                   src="{{url_for('static', filename='image/heart@2x.png')}}"
                 />
               </div>
               <b class="extrovert">內向</b>
               <div class="traits-grid2">
                 <img class="line-icon" alt="" src="{{url_for('static', filename='image/line.svg')}}" />
-
                 <img class="vector-icon5" alt="" src="{{url_for('static', filename='image/vector-38.svg')}}" />
               </div>
               <div class="traits-grid3">
                 <img
                   class="line-copy-2"
                   alt=""
-                  
                   src="{{url_for('static', filename='image/line-copy-2.svg')}}"
                 />
 
@@ -155,13 +133,13 @@
                 <img
                   class="line-copy-4"
                   alt=""
-                  
                   src="{{url_for('static', filename='image/line-copy-4.svg')}}"
                 />
 
                 <img class="vector-icon7" alt="" src="{{url_for('static', filename='image/vector-51.svg')}}" />
               </div>
               <b class="personality">Personality</b>
+            </div>
           </div>
         </section>
       </main>
