--- a/templates/sentiment-analysis.html
+++ b/templates/sentiment-analysis.html
@@ -120,7 +120,7 @@
                   class="bold-duotone-essentional-ui1"
                   loading="lazy"
                   alt=""
-                  
+
                   src="{{url_for('static', filename='image/bold-duotone--essentional-ui--danger-triangle.svg')}}"
                 />
               </div>
@@ -129,7 +129,7 @@
                   class="bold-duotone-essentional-ui2"
                   loading="lazy"
                   alt=""
-                  
+
                   src="{{url_for('static', filename='image/bold-duotone--essentional-ui--trash-bin-2.svg')}}"
                 />
               </div>
@@ -139,7 +139,7 @@
                   <img
                     class="search-1-icon"
                     alt=""
-                    
+
                     src="{{url_for('static', filename='image/search-11.svg')}}"
                   />
 
@@ -160,14 +160,14 @@
                     <img
                       class="frame-child5"
                       alt=""
-                      
+
                       src="{{url_for('static', filename='image/frame-435-1@2x.png')}}"
                     />
 
                     <img
                       class="outline-messages-coversatio1"
                       alt=""
-                      
+
                       src="{{url_for('static', filename='image/outline--messages-coversation--square-forward-1.svg')}}"
                     />
                   </div>
@@ -181,14 +181,14 @@
                   <img
                     class="main-message-box1"
                     alt=""
-                    
+
                     src="{{url_for('static', filename='image/main-message-box@2x.png')}}"
                   />
 
                   <img
                     class="outline-messages-coversatio2"
                     alt=""
-                    
+
                     src="{{url_for('static', filename='image/outline--messages-coversation--square-forward-2.svg')}}"
                   />
                 </div>
@@ -201,7 +201,7 @@
                     class="frame-child6"
                     loading="lazy"
                     alt=""
-                    
+
                     src="{{url_for('static', filename='image/frame-437@2x.png')}}"
                   />
                 </div>
@@ -211,12 +211,11 @@
               <div class="main-message-box3">
                 <div class="border-bottom2"></div>
                 <div class="body-parent">
-                  <div class="body">Type a new message here</div>
+                    <textarea class="body" placeholder="Type a new message here"></textarea>
                   <img
                     class="send-icon"
                     loading="lazy"
                     alt=""
-                    
                     src="{{url_for('static', filename='image/send.svg')}}"
                   />
 
@@ -224,7 +223,6 @@
                     class="emojis-icon"
                     loading="lazy"
                     alt=""
-                    
                     src="{{url_for('static', filename='image/emojis.svg')}}"
                   />
 
@@ -232,7 +230,6 @@
                     class="outline-messages-coversatio3"
                     loading="lazy"
                     alt=""
-                    
                     src="{{url_for('static', filename='image/outline--messages-coversation--paperclip.svg')}}"
                   />
                 </div>
