--- a/templates/index.html
+++ b/templates/index.html
@@ -1,27 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed:ital,wght@1,700&display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Philosopher:wght@700&display=swap"/>
   </head>
   <body>
     <div class="home">
@@ -42,14 +30,8 @@
               <div class="login-container-parent">
                 <div class="login-container">
                   <div class="div">歡迎使用情感分析聊天對話助手！</div>
-                  <div
-                    class="login-button-container-wrapper"
-                    id="frameContainer"
-                  >
-                    <button
-                      class="login-button-container"
-                      id="loginButtonContainer"
-                    >
+                  <div class="login-button-container-wrapper" id="frameContainer">
+                    <button class="login-button-container" id="loginButtonContainer">
                       <div class="div1">登入</div>
                     </button>
                   </div>
@@ -57,12 +39,7 @@
                 <div class="frame-container">
                   <div class="vector-parent">
                     <img class="vector-icon" alt="" src="{{url_for('static', filename='image/vector.svg')}}" />
-                    
-                    <img
-                      class="vector-icon1"
-                      alt=""
-                      src="{{url_for('static', filename='image/vector1.svg')}}"
-                    />
+                    <img class="vector-icon1" alt="" src="{{url_for('static', filename='image/vector1.svg')}}" />
                   </div>
                 </div>
               </div>
@@ -79,21 +56,10 @@
     </div>
 
     <script>
-      var loginButtonContainer = document.getElementById("loginButtonContainer");
-      if (loginButtonContainer) {
-        loginButtonContainer.addEventListener("click", function (e) {
-          window.location.href = "./login-page.html";
-        });
-      }
-      
-      
-      var frameContainer = document.getElementById("frameContainer");
-      if (frameContainer) {
-        frameContainer.addEventListener("click", function (e) {
-          window.location.href = "./login-page.html";
-        });
-      } 
-      
-      </script>
+      document.getElementById("loginButtonContainer").addEventListener("click", function() {
+        window.location.href = "{{ url_for('login_page') }}";
+      });
+    </script>
   </body>
 </html>
+
