--- a/templates/setting.html
+++ b/templates/setting.html
@@ -1,27 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/setting.css') }}" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"/>
   </head>
   <body>
     <div class="setting">
@@ -30,7 +18,7 @@
         <div class="wrapper3">
           <a class="a4">首頁</a>
         </div>
-        <a class="a5">設定</a>
+        <button id="settingBackground" class="a5">設定</button>
       </header>
       <section class="profile-info-wrapper">
         <div class="profile-info">
@@ -40,7 +28,6 @@
                 class="pxl-20210309-203454756-1-icon1"
                 loading="lazy"
                 alt=""
-                
                 src="{{url_for('static', filename='image/pxl-20210309-203454756-1@2x.png')}}"
               />
             </div>
@@ -51,7 +38,6 @@
                 class="iconedit"
                 loading="lazy"
                 alt=""
-                
                 src="{{url_for('static', filename='image/iconedit.svg')}}"
               />
             </div>
@@ -64,9 +50,17 @@
         class="background-icon"
         loading="lazy"
         alt=""
-        
         src="{{url_for('static', filename='image/18@2x.png')}}"
       />
     </div>
+     <script>
+      var settingBackground = document.getElementById("settingBackground");
+      if (settingBackground) {
+        settingBackground.addEventListener("click", function () {
+          console.log("Button clicked");
+          window.location.href = "{{ url_for('setting') }}";
+        });
+      }
+      </script>
   </body>
 </html>
