--- a/templates/register.html
+++ b/templates/register.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="zh">
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
+    <meta name="description" content="註冊頁面，請填寫您的電子郵件、密碼和 MBTI 診斷結果。">
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/register.css') }}" />
@@ -10,79 +11,73 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"/>
-  </head>
-  <body>
+</head>
+<body>
     <div class="register">
-      <div class="container">
-        <h1 class="h11">註冊</h1>
-        <img
-          class="e355dc75c2e90373cb295-hero20v-icon2"
-          loading="lazy"
-          alt=""
-          src="{{ url_for('static', filename='image/627e355dc75c2e90373cb295-hero20visualp1600png@2x.png') }}"
-        />
-      </div>
-      <div class="rectangle-parent">
-        <div class="frame-item"></div>
-        <div class="login-form-container">
-          <div class="sign-in">Sign in</div>
-          <div class="user-name-input-container">
-            <div class="group-div">
-              <div class="div8">Email帳號</div>
-              <div class="password-input-background-parent">
-                <div class="password-input-background"></div>
-                <div class="enter-your-user1">Enter your user name</div>
-              </div>
-            </div>
-          </div>
-          <div class="user-name-input-container1">
-            <div class="instance-parent">
-              <div class="parent1">
-                <div class="div9">密碼</div>
-                <div class="instance-wrapper">
-                  <div class="user-name-input-background-parent">
-                    <div class="user-name-input-background"></div>
-                    <div class="enter-your-user2">Enter your user name</div>
-                  </div>
-                </div>
-              </div>
-              <img
-                class="group-icon"
-                loading="lazy"
-                alt=""
-                src="{{url_for('static', filename='image/group.svg')}}"
-              />
-            </div>
-          </div>
-          <div class="user-name-input-container2">
-            <div class="instance-group">
-              <div class="password-group">
-                <div class="password1">MBTI</div>
-                <div class="instance-container">
-                  <div class="rectangle-group">
-                    <div class="instance-child"></div>
-                    <div class="enter-your-password1">Enter your MBTI</div>
-                  </div>
-                </div>
-              </div>
-              <div class="invisible-1"></div>
-            </div>
-          </div>
+        <div class="container">
+            <h1 class="h11">註冊</h1>
+            <img class="e355dc75c2e90373cb295-hero20v-icon2" loading="lazy" alt="" src="{{ url_for('static', filename='image/627e355dc75c2e90373cb295-hero20visualp1600png@2x.png') }}" />
         </div>
-        <div class="register-background-parent">
-          <div class="register-background" id="registerBackground"></div>
-          <div class="div10">註冊</div>
-        </div>
-      </div>
+        <form method="POST" action="{{ url_for('register') }}">
+            <div class="rectangle-parent">
+                <div class="frame-item"></div>
+                <div class="login-form-container">
+                    <div class="sign-in">Sign in</div>
+                    <div class="input-container">
+                        <label for="email" class="label">Email帳號</label>
+                        <input
+                            id="email"
+                            class="input-field"
+                            placeholder="Enter your email"
+                            type="email"
+                            onfocus="this.placeholder = ''"
+                            onblur="this.placeholder = 'Enter your email'"
+                        />
+                    </div>
+                    <div class="input-container">
+                        <label for="password" class="label">密碼</label>
+                        <input
+                            id="password"
+                            class="input-field"
+                            placeholder="Enter your password"
+                            type="password"
+                            onfocus="this.placeholder = ''"
+                            onblur="this.placeholder = 'Enter your password'"
+                        />
+                    </div>
+                    <div class="input-container">
+                        <label for="mbti" class="label">MBTI</label>
+                        <input
+                            id="mbti"
+                            class="input-field"
+                            placeholder="Enter your MBTI"
+                            type="text"
+                            onfocus="this.placeholder = ''"
+                            onblur="this.placeholder = 'Enter your MBTI'"
+                        />
+                    </div>
+                </div>
+                <div class="register-background-parent">
+                    <button type="button" class="register-background" id="registerBackground"></button>
+                    <div class="div10" id="Register-text">登入</div>
+                </div>
+            </div>
+        </form>
     </div>
-
     <script>
       var registerBackground = document.getElementById("registerBackground");
       if (registerBackground) {
-        registerBackground.addEventListener("click", function (e) {
+        registerBackground.addEventListener("click", function () {
           window.location.href = "{{ url_for('login_page') }}";
         });
       }
+
+      var RegisterText = document.getElementById("Register-text");
+      if (RegisterText) {
+         RegisterText.addEventListener("click", function () {
+          window.location.href = "{{ url_for('main_page') }}";
+         });
+      }
       </script>
-  </body>
+</body>
 </html>
