--- a/templates/register.html
+++ b/templates/register.html
@@ -1,101 +1,54 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1, width=device-width" />
-
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/register.css') }}" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"
-    />
-  </head>
-  <body>
-    <div class="register">
-      <div class="container">
-        <h1 class="h11">註冊</h1>
+{% extends "bootstrap4/base.html" %}
+{% block title %}註冊{% endblock %}
+{% block styles %}
+    {{super()}}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/register.css') }}">
+{% endblock %}
+{% block content %}
+<div class="BG-group">
         <img
-          class="e355dc75c2e90373cb295-hero20v-icon2"
+          class="BG-icon1"
           loading="lazy"
           alt=""
-          
           src="{{ url_for('static', filename='image/627e355dc75c2e90373cb295-hero20visualp1600png@2x.png') }}"
         />
-      </div>
-      <div class="rectangle-parent">
-        <div class="frame-item"></div>
-        <div class="login-form-container">
-          <div class="sign-in">Sign in</div>
-          <div class="user-name-input-container">
-            <div class="group-div">
-              <div class="div8">Email帳號</div>
-              <div class="password-input-background-parent">
-                <div class="password-input-background"></div>
-                <div class="enter-your-user1">Enter your user name</div>
-              </div>
-            </div>
-          </div>
-          <div class="user-name-input-container1">
-            <div class="instance-parent">
-              <div class="parent1">
-                <div class="div9">密碼</div>
-                <div class="instance-wrapper">
-                  <div class="user-name-input-background-parent">
-                    <div class="user-name-input-background"></div>
-                    <div class="enter-your-user2">Enter your user name</div>
-                  </div>
+    <div class="register-container">
+        <h1>註冊</h1>
+        <div class="register-form">
+            <h2>Sign in</h2>
+            <form method="POST" action="{{ url_for('register') }}">
+                {{ form.hidden_tag() }}
+                <div class="form-group">
+                    {{ form.email.label(class="form-label") }}
+                    {{ form.email(class="form-input", placeholder="Email") }}
                 </div>
-              </div>
-              <img
-                class="group-icon"
-                loading="lazy"
-                alt=""
-                src="{{url_for('static', filename='image/group.svg')}}"
-              />
-            </div>
-          </div>
-          <div class="user-name-input-container2">
-            <div class="instance-group">
-              <div class="password-group">
-                <div class="password1">MBTI</div>
-                <div class="instance-container">
-                  <div class="rectangle-group">
-                    <div class="instance-child"></div>
-                    <div class="enter-your-password1">Enter your MBTI</div>
-                  </div>
+                <div class="form-group">
+                    {{ form.password.label(class="form-label") }}
+                    {{ form.password(class="form-input", placeholder="密碼") }}
                 </div>
-              </div>
-              <div class="invisible-1"></div>
-            </div>
-          </div>
+                <div class="form-group">
+                    {{ form.password2.label(class="form-label") }}
+                    {{ form.password2(class="form-input", placeholder="確認密碼") }}
+                </div>
+                {{ form.submit(class="submit-button") }}
+            </form>
         </div>
-        <div class="register-background-parent">
-          <div class="register-background" id="registerBackground"></div>
-          <div class="div10">註冊</div>
-        </div>
-      </div>
     </div>
+</div>
+{% endblock %}
 
-    <script>
-      var registerBackground = document.getElementById("registerBackground");
-      if (registerBackground) {
-        registerBackground.addEventListener("click", function (e) {
-          window.location.href = "./login-page.html";
-        });
-      }
-      </script>
-  </body>
-</html>
+{% block scripts %}
+{{super()}}
+<script>
+  var registerBackground = document.getElementById("registerBackground");
+  if (registerBackground) {
+    registerBackground.addEventListener("click", function (e) {
+      window.location.href = "{{ url_for('login_page') }}";
+    });
+  }
+</script>
+{% endblock %}
+
+
+
+
