--- a/templates/register.html
+++ b/templates/register.html
@@ -48,7 +48,7 @@
                     <div class="input-container">
                         <label for="mbti" class="label">MBTI類型</label>
                         <div class="custom-select">
-            <div class="selected-option">选择你的 MBTI 类型</div>
+            <div class="selected-option">Choose your MBTI</div>
             <div class="options-container">
                 <div class="option" data-value="ENFJ" data-color="#93c47d">ENFJ</div>
                 <div class="option" data-value="ENFP" data-color="#93c47d">ENFP</div>
@@ -73,7 +73,7 @@
                 </div>
                 <div class="register-background-parent">
                     <button type="button" class="register-background" id="registerBackground"></button>
-                    <div class="div10" id="Register-text">登入</div>
+                    <div class="div10" id="Register-text">註冊</div>
                 </div>
             </div>
         </div>
