--- a/templates/register.html
+++ b/templates/register.html
@@ -90,7 +90,7 @@
       var RegisterText = document.getElementById("Register-text");
       if (RegisterText) {
          RegisterText.addEventListener("click", function () {
-          window.location.href = "{{ url_for('main_page') }}";
+          window.location.href = "{{ url_for('login_page') }}";
          });
       }
 
